--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.1.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.3.1",
