--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "@clerk/nextjs": "^4.29.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dom-to-image": "^2.6.0",
     "lucide-react": "^0.312.0",
     "mongoose": "^8.1.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.4",
+    "qrcode": "^1.5.3",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.3.1",
